MDEV-36167 Assertion failed for st_collect with GROUP BY

Implement aggregation for SELECT ST_COLLECT() ... GROUP BY.

reset_field now produces multi* types always

pass group-by items to update_field